--- a/ports/win32/msvc/lwIP_Test.vcxproj
+++ b/ports/win32/msvc/lwIP_Test.vcxproj
@@ -124,6 +124,7 @@
   <ItemGroup>
     <ClCompile Include="..\..\..\addons\ipv6_static_routing\ip6_route_table.c" />
     <ClCompile Include="..\..\..\addons\tcp_isn\tcp_isn.c" />
+    <ClCompile Include="..\..\..\apps\snmp_v3\snmpv3_dummy.c" />
     <ClCompile Include="..\..\..\apps\tcpecho_raw\tcpecho_raw.c" />
     <ClCompile Include="..\..\..\apps\udpecho_raw\udpecho_raw.c" />
     <ClCompile Include="..\test.c">
@@ -155,6 +156,7 @@
     <ClInclude Include="..\..\..\apps\ping\ping.h" />
     <ClInclude Include="..\..\..\apps\rtp\rtp.h" />
     <ClInclude Include="..\..\..\apps\shell\shell.h" />
+    <ClInclude Include="..\..\..\apps\snmp_v3\snmpv3_dummy.h" />
     <ClInclude Include="..\..\..\apps\socket_examples\socket_examples.h" />
     <ClInclude Include="..\..\..\apps\tcpecho\tcpecho.h" />
     <ClInclude Include="..\..\..\apps\tcpecho_raw\tcpecho_raw.h" />
