win32 project: added altcp_priv.h

--- a/ports/win32/msvc/lwIP.vcxproj.filters
+++ b/ports/win32/msvc/lwIP.vcxproj.filters
@@ -960,6 +960,9 @@
     <ClInclude Include="..\..\..\..\lwip\src\include\lwip\apps\smtp_opts.h">
       <Filter>src\include\lwip\apps</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\..\lwip\src\include\lwip\priv\altcp_priv.h">
+      <Filter>src\include\lwip\priv</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <CustomBuildStep Include="..\lwipcfg_msvc.h.example">
