--- a/ports/win32/msvc/lwIP.vcxproj.filters
+++ b/ports/win32/msvc/lwIP.vcxproj.filters
@@ -963,6 +963,12 @@
     <ClInclude Include="..\..\..\..\lwip\src\include\lwip\priv\altcp_priv.h">
       <Filter>src\include\lwip\priv</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\..\lwip\src\include\lwip\apps\mqtt_priv.h">
+      <Filter>src\include\lwip\apps</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\lwip\src\include\lwip\apps\mqtt_opts.h">
+      <Filter>src\include\lwip\apps</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <CustomBuildStep Include="..\lwipcfg_msvc.h.example">
